# curlgenerator

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MIGRATION-SUMMARY.md  QUICKREF.md  README.md  SUMMARY.md  build.rs  converted_v3_debug.json  snapcraft.yaml  test-conv.json  test_openapi_crate.rs
.github/: NUGET_TRUSTED_PUBLISHING.md  WORKFLOWS.md  copilot-instructions.md
.github/workflows/: build.yml  changelog.yml  codecov.yml  coverage.yml  dependencies.yml  pages.yml  production-tests.yml  qodana.yml  regression-tests.yml  release-preview.yml  release-template.yml  release.yml  security.yml  smoke-tests.yml  template.yml
docs/: COMPARISON.md  MIGRATION-SUMMARY.md  MIGRATION.md  Marketplace.md  QUICKSTART.md  index.html  script.js  styles.css
dotnet-archived/: CurlGenerator.sln  README.md
dotnet-archived/src/: generator.rs  script.rs
dotnet-archived/test/: generate-with-azure-token.ps1
src/: Directory.Build.props  cli.rs  error.rs  generator.rs  main.rs  openapi.rs  script.rs
src/CurlGenerator.Core/: AzureEntraID.cs  CurlGenerator.Core.csproj  FileGenerator.cs  GeneratorResult.cs  GeneratorSettings.cs  OpenApiDocumentFactory.cs  OperationNameGenerator.cs  README.md  ScriptFile.cs  ScriptFileGenerator.cs  Serializer.cs  StringExtensions.cs
src/CurlGenerator.Tests/: CurlGenerator.Tests.csproj  GenerateCommandTests.cs  OpenApiDocumentFactoryTests.cs  OpenApiStatsTests.cs  OpenApiValidationResultTests.cs  OpenApiValidatorTests.cs  OperationNameGeneratorTests.cs  PrivacyHelperTests.cs  ScriptFileGeneratorTests.cs  SerializerTests.cs  StringExtensionsTests.cs  (+3 more)
test/: README.md  smoke-tests.ps1  smoke-tests.sh
tests/: smoke-tests.ps1  smoke-tests.sh
(+36 files in other folders)
