[package]
name = "curlgenerator"
version = "0.1.0"
edition = "2021"
authors = ["Christian Helle"]
description = "Generate cURL requests from OpenAPI specifications v2.0 and v3.0"
license = "MIT"
repository = "https://github.com/christianhelle/curlgenerator"

[[bin]]
name = "curlgenerator"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["blocking", "json"] }
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
openapiv3 = "2.0"
sw4rm-rs = "0.2.0"

[build-dependencies]
time = { version = "0.3", features = ["formatting", "macros"] }
embed-resource = "2.4"
image = "0.25"
ico = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
